<resources>
    <string name="app_name">أذكار الصباح والمساء</string>
    <string name="elsabah">أذكار الصباح</string>
    <string name="elmasaa">أذكار المساء</string>
    <string name="elwdoo">أذكار الوضوء</string>
    <string name="elsala">أذكار الصلاة</string>
    <string name="elfood">أذكار الطعام</string>
    <string name="elsleep">أذكار النوم</string>
    <string name="elazan">أذكار الأذان</string>
    <string-array name="elsbah">
        <item>
            أعوذ بالله من الشيطان الرجيم {اللّهُ لاَ إِلَـهَ إِلاَّ هُوَ الْحَيُّ الْقَيُّومُ لاَ تَأْخُذُهُ سِنَةٌ وَلاَ نَوْمٌ لَّهُ مَا فِي السَّمَاوَاتِ وَمَا فِي الأَرْضِ مَن ذَا الَّذِي يَشْفَعُ عِنْدَهُ إِلاَّ بِإِذْنِهِ يَعْلَمُ مَا بَيْنَ أَيْدِيهِمْ وَمَا خَلْفَهُمْ وَلاَ يُحِيطُونَ بِشَيْءٍ مِّنْ عِلْمِهِ إِلاَّ بِمَا شَاء وَسِعَ كُرْسِيُّهُ السَّمَاوَاتِ وَالأَرْضَ وَلاَ يَؤُودُهُ حِفْظُهُمَا وَهُوَ الْعَلِيُّ الْعَظِيمُ}
        </item>
        <item>
            أصبحنا وأصبح الملك لله، والحمد لله، لا إله إلا الله وحده لا شريك له، له الملك وله الحمد وهو على كل شيء قدير، ربِّ أسألك خير ما في هذا اليوم وخير ما بعده وأعوذ بك من شر ما في هذه الليلة وشر ما بعدها ربِّ أعوذ بك من الكسل وسوء الكبر، ربَّ أعوذ بك من عذابٍ في النار وعذاب في القبر
        </item>
        <item>
            اللهم بك أصبحنا وبك أمسينا وبك نحيا وبك نموت وإليك النشور
        </item>
        <item>
            اللهم أنت ربي لا إله إلا أنت خَلَقتني وأنا عَبْدُك وأنا على عهدك ووعدك ما استطعت وأعوذ بك من شر ما صنعت أبوء لك بنعمتك على وأبوء بذنبي فاغفر لي فإنه لا يغفر الذنوب إلا أنت
        </item>
        <item>
            اللهم ما أصبح بي من نعمة أو بأحد من خلقك فمنك وحدك لا شريك لك، فلك الحمد ولك الشكر
        </item>
        <item>
            اللهم إني أسألك العافية في الدنيا والآخرة، اللهم إني أسألك العفو والعافية في ديني ودنياي وأهلي ومالي، اللهم استر عوراتي وآمن روعاتي، اللهم احفظني من بين يديَّ ومن خلفي وعن يميني وعن شمالي ومن فوقي وأعوذ بعظمتك أن أغتال من تحتي
        </item>
        <item>
            يا حي يا قيوم برحمتك أستغيث أصلح لي شأني كُله ولا تَكِلْني إلى نفيس طرفة عين
        </item>
        <item>
            اللهم إني أسألك علماً نافعاً، ورزقاً طيباً، وعملاً متقبلاً (إذا أصبح)
        </item>
        <item>
            أستغفر الله وأتوب إليه (مائة مرة في اليوم)
        </item>
        <item>
            اللهم صل وسلم على نبينا محمد (عشر مرات)
        </item>
    </string-array>
    <string-array name="elmsaa">
        <item>
            اللهم بك أمسينا، وبك أصبحنا، (اللهم بك أصبحنا، وبك أمسينا) وبك نحيا، وبك نموت، واليك النشور (المصير).
        </item>
        <item>
            اللهم أنت ربي لا إله إلا أنت، خلقتني و أنا عبدك، وأنا على عهدك ووعدك ما استطعت، أعوذ بك من شر ما صنعت، أبوء لك بنعمتك علي، وأبوء بذنبي فاغفر لي فإنه لا يغفر الذنوب إلا أنت. (من قالها موقناً بها حين يمسى ومات من ليلته دخل الجنّة وكذلك حين يصبح)
        </item>
        <item>
            رضيت بالله رباً، وبالإسلام ديناً، وبمحمد صلى الله عليه وسلم نبياً ورسولآ. (من قالها حين يُصبح وحين يُمسى كان حقاً على الله أن يرضيه يوم القيامة)
        </item>
        <item>
            بسم الله الذي لا يضر مع إسمهُ شيء في الأرض ولا في السَماء وهو السميع العليم - (ثلاث مرات) من قالها لم يَضره من الله شيء.
        </item>
        <item>
            أشهد أن لا إله إلا أنت، أعوذ بك من شر نفسي، ومن شر الشيطان وشركه، وأن أقترف على نفسي سوءاً، أو أجره إلى مسلم.
        </item>
        <item>
            اللهم عالم الغيب والشهادة فاطر السموات والأرض، رب كل شئ ومليكه،
        </item>
        <item>
            اللهم إني أسألك العفو و العافية في الدنيا و الأخره،
        </item>
        <item>
            اللهم إحفظني من بين يدي، ومن خلفي، وعن يميني، وعن شمالي، ومن فوقي، وأعوذ بعظمتك إن أغتال من تحتي.
        </item>
        <item>
            اللهم استر عوراتي، وآمن روعاتي،
        </item>
        <item>
            اللهم إني أسألك العفو و العافية، في ديني ودنياي وأهلي، ومالي،
        </item>
    </string-array>
    <string-array name="azan">
        <item>
            من قال حين يسمع النداء اللهم رب هذه الدعوة التامة والصلاة القائمة آت محمدا الوسيلة والفضيلة وابعثه مقاما محمودا الذي وعدته حلت له شفاعتي يوم القيامة
        </item>
        <item>
            لا حول ولا قوة إلا بالله.
        </item>
        <item>
            مَنْ قَال حِينَ يسْمعُ المُؤذِّنَ : أَشْهَد أَنْ لا إِله إِلاَّ اللَّه وحْدهُ لا شَريك لهُ ، وَأَنَّ مُحمَّداً عبْدُهُ وَرسُولُهُ ، رضِيتُ بِاللَّهِ ربًّا ، وبمُحَمَّدٍ رَسُولاً ، وبالإِسْلامِ دِينًا ، غُفِر لَهُ ذَنْبُهُ
        </item>
        <item>
            من قَال حِين يسْمعُ النِّداءَ : اللَّهُمَّ رَبَّ هذِهِ الدَّعوةِ التَّامَّةِ ، والصَّلاةِ الْقَائِمةِ، آت مُحَمَّداً الْوسِيلَةَ ، والْفَضَيِلَة، وابْعثْهُ مقَامًا محْمُوداً الَّذي وعَدْتَه ، حلَّتْ لَهُ شَفَاعتي يوْم الْقِيامِة
        </item>
        <item>
            إِذا سمِعْتُمُ النِّداءَ ، فَقُولُوا كَما يقُولُ المُؤذِّنُ
        </item>
        <item>
            إِذا سمِعْتُمُ النِّداءَ فَقُولُوا مِثْلَ ما يَقُولُ ، ثُمَّ صَلُّوا علَيَّ ، فَإِنَّهُ مَنْ صَلَّى علَيَّ صَلاةً صَلَّى اللَّه عَلَيْهِ بِهَا عشْراً ، ثُمَّ سلُوا اللَّه لي الْوسِيلَةَ ، فَإِنَّهَا مَنزِلَةٌ في الجنَّةِ لا تَنْبَغِي إِلاَّ لعَبْدٍ منْ عِباد اللَّه وَأَرْجُو أَنْ أَكُونَ أَنَا هُو ، فَمنْ سَأَل ليَ الْوسِيلَة حَلَّتْ لَهُ الشَّفاعَةُ
        </item>
        <item>
               لا حول ولا قوة إلا بالله.
        </item>
        <item>
                        من قال حين يسمع النداء اللهم رب هذه الدعوة التامة والصلاة القائمة آت محمدا الوسيلة والفضيلة وابعثه مقاما محمودا الذي وعدته حلت له شفاعتي يوم القيامة
        </item>
        <item>
             لا حول ولا قوة إلا بالله.
        </item>
        <item>
                                    من قال حين يسمع النداء اللهم رب هذه الدعوة التامة والصلاة القائمة آت محمدا الوسيلة والفضيلة وابعثه مقاما محمودا الذي وعدته حلت له شفاعتي يوم القيامة
        </item>
    </string-array>
    <string-array name="wdoa">
        <item>
            ( أشْهَدُ أنْ لا إله إِلاَّ اللَّهُ وَحْدَهُ لا شَرِيك لَهُ ، وأشْهَدُ أنَّ مُحَمَّداً عَبْدُهُ وَرَسُولُهُ ، اللَّهُمَّ اجْعَلْنِي مِنَ التَوَّابِينَ ، واجْعَلْني مِنَ المُتَطَهِّرِينَ ، سُبْحانَكَ اللَّهُمَّ وبِحَمْدِكَ ، أشْهَدُ أنْ لا إلهَ إِلاَّ أنْتَ ، أسْتَغْفِرُكَ وأتُوبُ إِلَيْكَ ).
        </item>
        <item>
            مَا مِنْكُمْ مِنْ أَحَدٍ يَتَوَضَّأُ فَيُبْلِغُ أَوْ فَيُسْبِغُ الْوَضُوءَ ثُمَّ يَقُولُ : أَشْهَدُ أَنْ لا إِلَهَ إِلا اللَّهُ وَحْدَهُ لا شَرِيكَ لَهُ ، وَأَشْهَدُ أَنَّ مُحَمَّدًا عَبْدُهُ وَرَسُولُهُ ، إِلا فُتِحَتْ لَهُ أَبْوَابُ الْجَنَّةِ الثَّمَانِيَةُ يَدْخُلُ مِنْ أَيِّهَا شَاءَ
        </item>
        <item>
             اللَّهُمَّ اجْعَلْنِي مِنْ التَّوَّابِينَ ، وَاجْعَلْنِي مِنْ الْمُتَطَهِّرِينَ
        </item>
        <item>
            سُبْحانَكَ اللَّهُمَّ وبِحَمْدِكَ ، أشْهَدُ أنْ لا إلهَ إِلاَّ أنْتَ ، أسْتَغْفِرُكَ وأتُوبُ إِلَيْكَ
        </item>
        <item>
            عند غسل الوجه : (اللهم بيض وجهي يوم تسود الوجوه)
        </item>
        <item>
            عند غسل اليدين : (اللهم أعطني كتابي بيميني ، ولا تعطني كتابي بشمالي )
        </item>
        <item>
            سُبْحانَكَ اللَّهُمَّ وبِحَمْدِكَ ، أشْهَدُ أنْ لا إلهَ إِلاَّ أنْتَ ، أسْتَغْفِرُكَ وأتُوبُ إِلَيْكَ
        </item>
        <item>
            أشْهَدُ أنْ لا إله إِلاَّ اللَّهُ وَحْدَهُ لا شَرِيك لَهُ ، وأشْهَدُ أنَّ مُحَمَّداً عَبْدُهُ وَرَسُولُهُ ، اللَّهُمَّ اجْعَلْنِي مِنَ التَوَّابِينَ ، واجْعَلْني مِنَ المُتَطَهِّرِينَ
        </item>
        <item>
            اللهم بيض وجهي يوم تسود الوجوه
        </item>
        <item>
            اللهم أعطني كتابي بيميني ، ولا تعطني كتابي بشمالي
        </item>
    </string-array>
    <string-array name="salaa">
        <item>
            اللّهُـمَّ اجْعَـلْ في قَلْبـي نورا ، وَفي لِسـاني نورا، وَاجْعَـلْ في سَمْعي نورا، وَاجْعَـلْ في بَصَري نورا، وَاجْعَـلْ مِنْ خَلْفي نورا، وَمِنْ أَمامـي نورا، وَاجْعَـلْ مِنْ فَوْقـي نورا ، وَمِن تَحْتـي نورا .اللّهُـمَّ أَعْطِنـي نورا.
        </item>
        <item>
            أَعوذُ باللهِ العَظيـم وَبِوَجْهِـهِ الكَرِيـم وَسُلْطـانِه القَديـم مِنَ الشّيْـطانِ الرَّجـيم،[ بِسْـمِ الله، وَالصَّلاةُ] [وَالسَّلامُ عَلى رَسولِ الله]، اللّهُـمَّ افْتَـحْ لي أَبْوابَ رَحْمَتـِك.
        </item>
        <item>
            بِسمِ الله وَالصّلاةُ وَالسّلامُ عَلى رَسولِ الله، اللّهُـمَّ إِنّـي أَسْأَلُكَ مِـنْ فَضْـلِك، اللّهُـمَّ اعصِمْنـي مِنَ الشَّيْـطانِ الرَّجـيم.
        </item>
        <item>
            سبحانك اللهم وبحمدك وتبارك اسمك وتعالى جدك ولا إله غيرك
        </item>
        <item>
            اللهم باعد بيني وبين خطاياي كما باعدت بين المشرق والمغرب اللهم نقني من خطاياي كما ينقى الثوب الأبيض من الدنس اللهم اغسلني من خطاياي بالثلج والماء والبرد
        </item>
        <item>
            وعنهُ أنَّ رسُول اللَّه صَلّى اللهُ عَلَيْهِ وسَلَّم كانَ يقُولُ في سُجُودِهِ اللَّهُمَّ اغفِرْ لي ذَنبي كُلَّهُ : دِقَّه وجِلَّهُ ، وأَوَّله وَآخِرَهُ ، وعلانيته وَسِرَّه » رواهُ مسلم .
        </item>
        <item>
            وعنْ عائشةَ رضي اللَّه عنْها قالَتْ : افتَقدْتُ النبي صَلّى اللهُ عَلَيْهِ وسَلَّم ذَاتَ لَيْلَةٍ ، فَتَحَسَّسْتُ، فَإذَا هُو راكعٌ أوْ سَاجدٌ يقولُ : « سُبْحَانكَ وبحمدِكَ ، لا إلهَ إلاَّ أنْتَ » وفي روايةٍ : فَوقَعَت يَدِي على بَطْنِ قَدميهِ ، وهُوَ في المَسْجِدِ ، وهما منْصُوبتانِ ، وَهُوَ يَقُولُ : « اللَّهُمَّ إنِّي أَعُوذُ بِرضَاكَ مِنْ سَخَطِكَ ، وبمُعافاتِكَ مِنْ عُقوبتِكَ ، وَأَعُوذُ بِك مِنْكَ ، لا أُحْصِي ثَنَاءً عليكَ أَنْتَ كما أثنيتَ على نَفْسِكَ » رواهُ مسلم .
        </item>
        <item>
            عنْ أبي هُريْرة رضي اللَّه عَنْهُ أنَّ رسُولَ اللَّهِ صَلّى اللهُ عَلَيْهِ وسَلَّم قَالَ : « إذا تَشَهَّد أَحدُكُمْ فَليسْتَعِذ بِاللَّه مِنْ أرْبَع ، يقولُ : اللَّهُمَّ إنِّي أعُوذُ بِكَ مِنْ عذَابِ جهَنَّمَ ، وَمِنْ عَذَابِ القَبرِ، وَمِنْ فِتْنةِ المحْيَا والمَماتِ ، وَمِنْ شَرِّ فِتْنَةِ المَسِيح الدَّجَّالِ » . رواه مسلم .
        </item>
        <item>
            وعنْ عَلِيٍّ رضي اللَّه عنْهُ قال : كانَ رَسُولُ اللَّهِ إذا قام إلى الصَّلاةِ يكونُ مِنْ آخِر ما يقولُ بينَ التَّشَهُّدِ والتَّسْلِيم : « اللَّهمَّ اغفِرْ لي ما قَدَّمتُ وما أَخَّرْتُ ، وما أَسْرَرْتُ ومَا أعْلَنْتُ ، وما أَسْرفْتُ ، وما أَنتَ أَعْلمُ بِهِ مِنِّي ، أنْتَ المُقَدِّمُ ، وَأنْتَ المُؤَخِّرُ ، لا إله إلاَّ أنْتَ » رواه مسلم .
        </item>
        <item>
            سجد وجهي للذي خلقه وشق سمعه وبصره بحوله وقوته (فتبارك الله أحسن الخلقين)
اللهم اكتب لي بها عندك أجرا وضع عني بها وزرا واجعلها لي عندك ذخرا وتقبلها مني كما تقبلتها من عبدك داود ..
        </item>
    </string-array>
</resources>