<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/play"
    android:orientation="vertical"
    tools:context="com.azkar.MainActivity">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/play"
        android:layout_marginBottom="10dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:gravity="center"
            android:padding="10dp"
            android:textSize="26sp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            />
    </android.support.design.widget.AppBarLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:layout_centerInParent="true"
            app:cardBackgroundColor="@color/play_dark"
            app:cardCornerRadius="10dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                >
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/azkar_elsbah"
                    android:text="@string/elsabah"
                    android:textSize="22sp"
                    android:background="@drawable/button"
                    android:layout_margin="10dp"
                    />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/azkar_elmsaa"
                    android:text="@string/elmasaa"
                    android:textSize="22sp"
                    android:background="@drawable/button"
                    android:layout_margin="10dp"
                    />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/azkar_elazan"
                    android:text="@string/elazan"
                    android:textSize="22sp"
                    android:background="@drawable/button"
                    android:layout_margin="10dp"
                    />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/azkar_elwdoa"
                    android:text="@string/elwdoo"
                    android:textSize="22sp"
                    android:background="@drawable/button"
                    android:layout_margin="10dp"
                    />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/azkar_elsala"
                    android:text="@string/elsala"
                    android:textSize="22sp"
                    android:background="@drawable/button"
                    android:layout_margin="10dp"
                    />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/azkar_elfood"
                    android:text="@string/elfood"
                    android:textSize="22sp"
                    android:background="@drawable/button"
                    android:layout_margin="10dp"
                    />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/azkar_sleep"
                    android:text="@string/elsleep"
                    android:textSize="22sp"
                    android:background="@drawable/button"
                    android:layout_margin="10dp"
                    />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </ScrollView>
</LinearLayout>
